2008-12-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/install_update_options.rb: Add --bindir option to
	specify destination to install executables into.  Patch #17937 by
	Donavan Pantke.
	* lib/rubygems/specification.rb: Fix Time.today == Time.today.  Bug
	#17413 by Andrei Bocan.
	* setup.rb: Properly check for deletablitily of user and system
	caches.  Bug #17869 by Alexey Verkhovsky.  Fix --no-format-executable.
	Fixes bug #16879 by Charles Nutter.

2008-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb: Add persistent connection support.
	Patch #18180 by Aaron Patterson.
	* lib/rubygems/installer.rb: Fix #shebang to use the ruby install
	name.  Patch #16878 by Donavan Pantke.
	* lib/rubygems/defaults.rb, lib/rubygems.rb: Enable defaults for
	Gem.path and Gem.binder.  Patch #17886 by Donavan Pantke.
	* test/test_gem_ext_configure_builder.rb: Make test_self_build_fail
	more platform independent.  Patch #17599 by Martin Krauskopf.

2008-02-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/fetch_command.rb: Fix a bug when fetching
	from non-default sources.  Report non-existent gems instead of
	crashing.

2008-01-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Use portable and safe ENV
	operation.  Patch by usa in ruby SVN revision 14739.
	* lib/rubygems/open-uri.rb: Fix tests.  Patch by NARUSE Yui.
	[ruby-dev:33336]

2007-12-23  Eric Hodel  <drbrain@segment7.net>

	* util/gem_prelude.rb:  Remove methods from Gem, not QuickLoader, to
	fix warnings.

2007-12-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/environment_command.rb:  Put GEM PATHS in the
	correct order.
	* lib/rubygems/commands/uninstall_command.rb:  Add --install-dir to
	specify which local repository to uninstall from.  Patch #15151 by
	Donavan Pantke.
	* lib/rubygems/uninstaller.rb:  Only allow uninstallation of gems from
	specified directory.  Properly clean up executables on uninstall.